v2.3.0/_sources/Arbiter_KFEArbiter_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.92.73.1.1
      -
    * - Target IP address
      - 172.21.92.73
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _KFEArbiter_pragmas:

Pragmas
-------

Total pragmas found: 65
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, , 2.8.2
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_SystemCX, Beckhoff Automation GmbH, Unset, 3.3.6.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4391744 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 1274490832 (8)
        Constants.bLittleEndian, BOOL, 1274490656 (8)
        Constants.bSimulationMode, BOOL, 1274490664 (8)
        Constants.CompilerVersion, VERSION, 1274490736 (64)
        Constants.CompilerVersionNumeric, DWORD, 1274490880 (32)
        Constants.nPackMode, UINT, 1274490816 (16)
        Constants.nRegisterSize, WORD, 1274490800 (16)
        Constants.RuntimeVersion, VERSION, 1274490672 (64)
        Constants.RuntimeVersionNumeric, DWORD, 1274490848 (32)


CurrentBPUpdate
^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>29 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        CurrentBPUpdate.cMR1K1_IN_LowerLimit, UDINT, 1272066080 (32)
        CurrentBPUpdate.cMR1K1_IN_UpperLimit, UDINT, 1272066048 (32)
        CurrentBPUpdate.cMR1K1_OUT_UpperLimit, UDINT, 1272066112 (32)
        CurrentBPUpdate.fbBYKIK_Rate, FB_LREALFromEPICS, 1271758912 (960)
        CurrentBPUpdate.fbEPICS_KRate, FB_RateFromEPICS, 1271759872 (25280)
        CurrentBPUpdate.fbEPICSKBeamClass, FB_BeamClassFromEPICS, 1271786112 (25280)
        CurrentBPUpdate.fbEPICSLMachineMode, FB_MachineModeFromEPICS, 1271812352 (25280)
        CurrentBPUpdate.fbKPhotonEnergy, FB_KPhotonEnergy, 1271837632 (59136)
        CurrentBPUpdate.fbMPS_BeamClass, FB_LREALFromEPICS, 1271785152 (960)
        CurrentBPUpdate.fbMR1K1VetoDevice, FB_KVetoDevice, 1272066176 (84672)
        CurrentBPUpdate.fbSXR_MachineMode, FB_LREALFromEPICS, 1271811392 (960)
        CurrentBPUpdate.i_MR1K1_ENC, UDINT, 1271896800 (32)
        CurrentBPUpdate.q_MR1K1_VETO, BOOL, 1272066144 (8)
        CurrentBPUpdate.q_rPhotonEnergy, REAL, 1271896768 (32)
        CurrentBPUpdate.st1k2Watcher, FB_KStopper, 1271981440 (84608)
        CurrentBPUpdate.st1k2Watcher.i_StopperInLS, BOOL, 1271981512 (8)
        CurrentBPUpdate.st1k2Watcher.i_StopperOutLS, BOOL, 1271981504 (8)
        CurrentBPUpdate.st1k2Watcher.q_StopperIN_Relay, BOOL, 1271981528 (8)
        CurrentBPUpdate.st1k2Watcher.q_StopperOUT_Relay, BOOL, 1271981520 (8)
        CurrentBPUpdate.st3k4Watcher, FB_KStopper, 1271896832 (84608)
        CurrentBPUpdate.st3k4Watcher.i_StopperInLS, BOOL, 1271896904 (8)
        CurrentBPUpdate.st3k4Watcher.i_StopperOutLS, BOOL, 1271896896 (8)
        CurrentBPUpdate.st3k4Watcher.q_StopperIN_Relay, BOOL, 1271896920 (8)
        CurrentBPUpdate.st3k4Watcher.q_StopperOUT_Relay, BOOL, 1271896912 (8)
        CurrentBPUpdate.st4k4Watcher, FB_KStopper, 1272150848 (84608)
        CurrentBPUpdate.st4k4Watcher.i_StopperInLS, BOOL, 1272150920 (8)
        CurrentBPUpdate.st4k4Watcher.i_StopperOutLS, BOOL, 1272150912 (8)
        CurrentBPUpdate.st4k4Watcher.q_StopperIN_Relay, BOOL, 1272150936 (8)
        CurrentBPUpdate.st4k4Watcher.q_StopperOUT_Relay, BOOL, 1272150928 (8)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4390880 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4391008 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4391040 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4391072 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>362 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4184160 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4184064 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4184096 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4183936 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4184032 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4183872 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4184128 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4183904 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4183968 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4184000 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4183744 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4183520 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4183648 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4183712 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4183616 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4183776 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4183808 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4183584 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4183552 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4183680 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4183456 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4183840 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4183424 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4183488 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4184192 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4184224 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4185280 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4185216 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4185312 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4185344 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4185376 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4185408 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4185248 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4183312 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4183248 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4183376 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4183088 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4183360 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4183120 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4183072 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4183200 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4183392 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4183216 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4183232 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4183328 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4183104 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4183296 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4183152 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4183184 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4183264 (16)
        Global_Variables.ADSSTATE_START, UINT, 4183136 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4183168 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4183344 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4183280 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4250976 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4251008 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4251040 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4182784 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4181936 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4183008 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4183024 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4182896 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4182816 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4182880 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4182912 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4182832 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4182848 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4182864 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4182928 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4182944 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4182960 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4182976 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4182992 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4182800 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4183056 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4183040 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4391056 (16)
        Global_Variables.bEcFoeOpenFileNameWithFileExt, BOOL, 4181920 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4185448 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4185440 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4183408 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4181928 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4183416 (8)
        Global_Variables.bSeqReadDrvAttrAndValue, BOOL, 4180056 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4392736 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4258656 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4263968 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4270240 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4270208 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4270176 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4270272 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4186176 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 1264798208 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4249720 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4187744 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4386512 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4386520 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 1264798144 (64)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO, UDINT, 4180288 (32)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO_LASTERROR, UDINT, 4180320 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE, UDINT, 4179936 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE_LASTERROR, UDINT, 4179968 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FCLOSE, UDINT, 4180128 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENREAD, UDINT, 4180064 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENWRITE, UDINT, 4180096 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FREAD, UDINT, 4180160 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FWRITE, UDINT, 4180192 (32)
        Global_Variables.EC_ADS_IGRP_FOE_LASTERROR, UDINT, 4180256 (32)
        Global_Variables.EC_ADS_IGRP_FOE_PROGRESSINFO, UDINT, 4180224 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_FRAME, UDINT, 4179904 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_SLAVE, UDINT, 4179520 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_DEVICESTATE, UDINT, 4179872 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SENDCMD, UDINT, 4179680 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ABNORMAL_STATE_CHANGES, UDINT, 4179808 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ADDRESSES, UDINT, 4179648 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_CRC, UDINT, 4179776 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_IDENTITY, UDINT, 4179744 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_SETPRESENT_CHANGES, UDINT, 4179840 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_STATEMACHINE, UDINT, 4179392 (32)
        Global_Variables.EC_ADS_IGRP_SLAVE_STATEMACHINE, UDINT, 4179712 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_PORT, UDINT, 4179584 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_ROUTER, UDINT, 4179616 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_SLAVE, UDINT, 4179552 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_CURSTATE, UDINT, 4179424 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_INTERNALSTATE, UDINT, 4179488 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_REQSTATE, UDINT, 4179456 (32)
        Global_Variables.EC_AMSPORT_MASTER, UINT, 4178832 (16)
        Global_Variables.EC_CMD_TYPE_APRD, BYTE, 4096328 (8)
        Global_Variables.EC_CMD_TYPE_APRW, BYTE, 4179152 (8)
        Global_Variables.EC_CMD_TYPE_APWR, BYTE, 4097128 (8)
        Global_Variables.EC_CMD_TYPE_BRD, BYTE, 4179184 (8)
        Global_Variables.EC_CMD_TYPE_BRW, BYTE, 4179200 (8)
        Global_Variables.EC_CMD_TYPE_BWR, BYTE, 4179192 (8)
        Global_Variables.EC_CMD_TYPE_FPRD, BYTE, 4179160 (8)
        Global_Variables.EC_CMD_TYPE_FPRW, BYTE, 4179176 (8)
        Global_Variables.EC_CMD_TYPE_FPWR, BYTE, 4179168 (8)
        Global_Variables.EC_CMD_TYPE_LRD, BYTE, 4179208 (8)
        Global_Variables.EC_CMD_TYPE_LRW, BYTE, 4179224 (8)
        Global_Variables.EC_CMD_TYPE_LWR, BYTE, 4179216 (8)
        Global_Variables.EC_COE_PROTERR_ACCESS, UDINT, 4180928 (32)
        Global_Variables.EC_COE_PROTERR_BLK_SIZE, UDINT, 4180800 (32)
        Global_Variables.EC_COE_PROTERR_CCS_SCS, UDINT, 4180768 (32)
        Global_Variables.EC_COE_PROTERR_CRC, UDINT, 4180864 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE, UDINT, 4181344 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE1, UDINT, 4181376 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE2, UDINT, 4181408 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE, UDINT, 4181216 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE1, UDINT, 4181248 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE2, UDINT, 4181280 (32)
        Global_Variables.EC_COE_PROTERR_DICTIONARY, UDINT, 4181600 (32)
        Global_Variables.EC_COE_PROTERR_GENERAL, UDINT, 4181472 (32)
        Global_Variables.EC_COE_PROTERR_HARDWARE, UDINT, 4181184 (32)
        Global_Variables.EC_COE_PROTERR_I_INCOMP, UDINT, 4181152 (32)
        Global_Variables.EC_COE_PROTERR_INDEX, UDINT, 4181024 (32)
        Global_Variables.EC_COE_PROTERR_MEMORY, UDINT, 4180896 (32)
        Global_Variables.EC_COE_PROTERR_MINMAX, UDINT, 4181440 (32)
        Global_Variables.EC_COE_PROTERR_OFFSET, UDINT, 4181312 (32)
        Global_Variables.EC_COE_PROTERR_P_INCOMP, UDINT, 4181120 (32)
        Global_Variables.EC_COE_PROTERR_PDO_LEN, UDINT, 4181088 (32)
        Global_Variables.EC_COE_PROTERR_PDO_MAP, UDINT, 4181056 (32)
        Global_Variables.EC_COE_PROTERR_READONLY, UDINT, 4180992 (32)
        Global_Variables.EC_COE_PROTERR_SEQNO, UDINT, 4180832 (32)
        Global_Variables.EC_COE_PROTERR_TIMEOUT, UDINT, 4180736 (32)
        Global_Variables.EC_COE_PROTERR_TOGGLE, UDINT, 4180704 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER, UDINT, 4181504 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER1, UDINT, 4181536 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER2, UDINT, 4181568 (32)
        Global_Variables.EC_COE_PROTERR_WRITEONLY, UDINT, 4180960 (32)
        Global_Variables.EC_DCTIME_DATEDELTA_OFFSET, DWORD, 4181632 (32)
        Global_Variables.EC_DCTIME_DELTA_OFFSET, T_ULARGE_INTEGER, 4181664 (64)
        Global_Variables.EC_DCTIME_DELTA_OFFSET64, ULINT, 4181952 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4181856 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY64, ULINT, 4182144 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4181728 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC64, ULINT, 4182016 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4181792 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC64, ULINT, 4182080 (64)
        Global_Variables.EC_DEVICE_STATE_BOOTSTRAP, BYTE, 4179256 (8)
        Global_Variables.EC_DEVICE_STATE_DISABLED, BYTE, 4179304 (8)
        Global_Variables.EC_DEVICE_STATE_ERROR, BYTE, 4179280 (8)
        Global_Variables.EC_DEVICE_STATE_INIT, BYTE, 4179240 (8)
        Global_Variables.EC_DEVICE_STATE_INITCMD_ERROR, BYTE, 4179296 (8)
        Global_Variables.EC_DEVICE_STATE_INVALID_VPRS, BYTE, 4179288 (8)
        Global_Variables.EC_DEVICE_STATE_MASK, BYTE, 4179232 (8)
        Global_Variables.EC_DEVICE_STATE_OP, BYTE, 4179272 (8)
        Global_Variables.EC_DEVICE_STATE_PREOP, BYTE, 4179248 (8)
        Global_Variables.EC_DEVICE_STATE_SAFEOP, BYTE, 4179264 (8)
        Global_Variables.EC_FOE_PROTERR_ACCESS, UDINT, 4180416 (32)
        Global_Variables.EC_FOE_PROTERR_BOOTSTRAPONLY, UDINT, 4180608 (32)
        Global_Variables.EC_FOE_PROTERR_DISKFULL, UDINT, 4180448 (32)
        Global_Variables.EC_FOE_PROTERR_EXISTS, UDINT, 4180544 (32)
        Global_Variables.EC_FOE_PROTERR_ILLEAGAL, UDINT, 4180480 (32)
        Global_Variables.EC_FOE_PROTERR_INVALIDPASSWORD, UDINT, 4180672 (32)
        Global_Variables.EC_FOE_PROTERR_NOTDEFINED, UDINT, 4180352 (32)
        Global_Variables.EC_FOE_PROTERR_NOTFOUND, UDINT, 4180384 (32)
        Global_Variables.EC_FOE_PROTERR_NOTINBOOTSTRAP, UDINT, 4180640 (32)
        Global_Variables.EC_FOE_PROTERR_NOUSER, UDINT, 4180576 (32)
        Global_Variables.EC_FOE_PROTERR_PACKENO, UDINT, 4180512 (32)
        Global_Variables.EC_LINK_STATE_ADDITIONAL_LINK, BYTE, 4179344 (8)
        Global_Variables.EC_LINK_STATE_LINK_WITHOUT_COMM, BYTE, 4179328 (8)
        Global_Variables.EC_LINK_STATE_MISSING_LINK, BYTE, 4179336 (8)
        Global_Variables.EC_LINK_STATE_NOT_PRESENT, BYTE, 4179320 (8)
        Global_Variables.EC_LINK_STATE_OK, BYTE, 4179312 (8)
        Global_Variables.EC_LINK_STATE_PORT_A, BYTE, 4179352 (8)
        Global_Variables.EC_LINK_STATE_PORT_B, BYTE, 4179360 (8)
        Global_Variables.EC_LINK_STATE_PORT_C, BYTE, 4179368 (8)
        Global_Variables.EC_LINK_STATE_PORT_D, BYTE, 4179376 (8)
        Global_Variables.EC_MAX_SLAVES, UINT, 4179136 (16)
        Global_Variables.EC_SOE_ELEMENT_ATTRIBUTE, BYTE, 4180008 (8)
        Global_Variables.EC_SOE_ELEMENT_DATASTATE, BYTE, 4179384 (8)
        Global_Variables.EC_SOE_ELEMENT_DEFAULT, BYTE, 4180048 (8)
        Global_Variables.EC_SOE_ELEMENT_MAX, BYTE, 4180032 (8)
        Global_Variables.EC_SOE_ELEMENT_MIN, BYTE, 4180024 (8)
        Global_Variables.EC_SOE_ELEMENT_NAME, BYTE, 4180000 (8)
        Global_Variables.EC_SOE_ELEMENT_UNIT, BYTE, 4180016 (8)
        Global_Variables.EC_SOE_ELEMENT_VALUE, BYTE, 4180040 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4251616 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4389640 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4389344 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4389216 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4249728 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4186096 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4251088 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4251072 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4251104 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4251120 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4251136 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4251456 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4251232 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4251552 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4251328 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4251520 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4251584 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4251168 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4251200 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4251392 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4251296 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4251424 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4251488 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4251360 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4251264 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4185536 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4185600 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4185568 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4185472 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4185632 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4185504 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4251968 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4251712 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4251056 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4187712 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4186760 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4187680 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4187696 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4250944 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4249408 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4249440 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4392672 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4392704 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4249312 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4249280 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4249248 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4186768 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4249472 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4187760 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4249696 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4187752 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4249712 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4186208 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4392768 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4249704 (8)
        Global_Variables.nWatchdogTime, BYTE, 4186752 (8)
        Global_Variables.PI, LREAL, 4186112 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4249632 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4249664 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4249600 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4249504 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4185024 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4184384 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4184352 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4249536 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4249568 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4184448 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4184768 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4184736 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4250912 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4184608 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4184416 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4184704 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4184640 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4184480 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4184800 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4184672 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4184544 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4184576 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4184512 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4249344 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4249376 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4184832 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4184256 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4184288 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4184320 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4184896 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4184864 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4184928 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4184992 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4184960 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4185456 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4185464 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4258592 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4258944 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4258528 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4258880 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4258304 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4257456 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4257840 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4258464 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4258816 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4258336 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4258688 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4258400 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4258752 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4186080 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4186064 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4185968 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4185904 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4185920 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4185936 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4185888 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4185952 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4186032 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4185984 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4186016 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4186048 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4186000 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 1264791168 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4392064 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4391808 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4391776 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4392000 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4392032 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4391872 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4391904 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4391936 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4391840 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4391968 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4392320 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4392192 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4392160 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4392096 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4392256 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4392288 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4392128 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4392224 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4393216 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4392800 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4185152 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4185056 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4185120 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4185088 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4185184 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4259008 (864)

.. raw:: html

   </details>
   <br />


Global_Variables_EtherCAT
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables_EtherCAT.ESC_MAX_PORTS, UINT, 4178816 (16)
        Global_Variables_EtherCAT.iSLAVEADDR_ARR_SIZE, UINT, 4097136 (16)


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178848 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4390016 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 1264798272 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 1264790880 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4390304 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4390592 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4182208 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4182496 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4187392 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4391328 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4393632 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4186784 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634578016 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 1264790592 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.AttemptReset, BOOL, 1273500640 (8)
        GVL.g_FastFaultOutput1, FB_HardwareFFOutput, 1273500672 (494912)
        GVL.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 1273500936 (8)
        GVL.g_FastFaultOutput2, FB_HardwareFFOutput, 1273995584 (494912)
        GVL.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 1273995848 (8)
        GVL.g_fbArbiter1, FB_Arbiter, 1273025408 (473472)
        GVL.g_rTestingVelocity, LREAL, 1274490496 (64)
        GVL.MAX_FAST_FAULTS, UINT, 1273500656 (16)
        GVL.nLangId_OnlineMonitoring, DINT, 4391264 (32)
        GVL.ReqBP, ST_BeamParams, 1273498880 (1760)


GVL_CheckBounds
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_CheckBounds.nDivByZero, UDINT, 1274490624 (32)
        GVL_CheckBounds.nTooHigh, UDINT, 1274490592 (32)
        GVL_CheckBounds.nTooLow, UDINT, 1274490560 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4391616 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4396064 (16)
        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 634592352 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4393968 (8)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 626225128 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4393952 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 634590240 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4393936 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 634590224 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4393920 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 634590208 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 634592384 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4393984 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 634590272 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4393976 (8)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 634590256 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4394016 (2048)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 634590304 (2048)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626257152 (8320864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 1256469728 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 1256453728 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4396088 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 634592368 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626223072 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 1256419648 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626223040 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 1256419616 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626225120 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 634592376 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626225136 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 1256421696 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4396096 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 634592416 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626225152 (32000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 1256421728 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4396080 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 634590264 (8)

.. raw:: html

   </details>
   <br />


MachineSimulation
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MachineSimulation.fbeVSimulator, FB_eVSimulator, 1272238464 (9088)
        MachineSimulation.fbMachine, FB_MachineSimulator, 1272236096 (2368)


MAIN
^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.bM1K1_OUT_Override, BOOL, 1256421720 (8)
        MAIN.fbBPControl, FB_BPControlDevice, 1271725568 (2752)
        MAIN.fbEcatDiag, FB_EcatDiagWrapper, 1270629632 (1095936)
        MAIN.fbEcatDiag.arrEcMasterNetId, T_AmsNetIdArr, 1271713008 (48)
        MAIN.fbEcatDiag.nEcMasterDeviceId, UINT, 1271712992 (16)
        MAIN.fbEcatDiag.nEcMasterDevState, UINT, 1271712976 (16)
        MAIN.fbEcatDiag.nEcMasterSlaveCount, UINT, 1271712960 (16)
        MAIN.fbEcatDiag.nEcMasterSlaveCountCfg, UINT, 1271713248 (16)
        MAIN.fbEcatDiag.wFrmXWcState, WORD, 1270630048 (16)
        MAIN.fbGetTimeZone, FB_GetTimeZoneInformation, 1271751008 (3488)
        MAIN.fbLogHandler, FB_LogHandler, 1264840896 (5788736)
        MAIN.fbTime, FB_LocalSystemTime, 1271728384 (19040)
        MAIN.fbTime_to_UTC, FB_TzSpecificLocalTimeToSystemTime, 1271747424 (3584)
        MAIN.Initialize, BOOL, 1256421712 (8)
        MAIN.PERanges, PE_Ranges, 1271728320 (32)
        MAIN.SystemTime, DINT, 1271728352 (32)

.. raw:: html

   </details>
   <br />


P_AT1K0_SL1K0
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        P_AT1K0_SL1K0.bSimApt, BOOL, 1272920440 (8)
        P_AT1K0_SL1K0.ffKFEGattConnection, FB_FastFault, 1272946336 (25088)
        P_AT1K0_SL1K0.ffKFEMotConnection, FB_FastFault, 1272921248 (25088)
        P_AT1K0_SL1K0.i_bWcStateIn_AT1K0, BOOL, 1272066160 (8)
        P_AT1K0_SL1K0.i_bWcStateIn_KFEMOT, BOOL, 1272920432 (8)
        P_AT1K0_SL1K0.i_bWcStateOut_AT1K0, BOOL, 1272066152 (8)
        P_AT1K0_SL1K0.i_bWcStateOut_KFEMOT, BOOL, 1272066168 (8)
        P_AT1K0_SL1K0.i_nState_AT1K0, UINT, 1272920416 (16)
        P_AT1K0_SL1K0.i_nState_KFEMOT, UINT, 1272921216 (16)
        P_AT1K0_SL1K0.i_nTranToAT1K0Stat, ST_PMPS_Attenuator_IO, 1272920352 (64)
        P_AT1K0_SL1K0.i_stAptArrayStat, ST_PMPS_Aperture_IO, 1272920832 (384)
        P_AT1K0_SL1K0.idx, UINT, 1272921232 (16)
        P_AT1K0_SL1K0.q_nTranToAT1K0Req, ST_PMPS_Attenuator_IO, 1272920288 (64)
        P_AT1K0_SL1K0.q_stAptArrayReq, ST_PMPS_Aperture_IO, 1272920448 (384)

.. raw:: html

   </details>
   <br />


P_SATT
^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        P_SATT.ffkfeConnection, FB_FastFault, 1272974560 (25088)
        P_SATT.ffRixConnection, FB_FastFault, 1272999648 (25088)
        P_SATT.i_bWcStateIn_kfe_mot, BOOL, 1272974504 (8)
        P_SATT.i_bWcStateIn_rix_mot, BOOL, 1272974536 (8)
        P_SATT.i_bWcStateOut_kfe_mot, BOOL, 1272974496 (8)
        P_SATT.i_bWcStateOut_rix_mot, BOOL, 1272974528 (8)
        P_SATT.i_nState_kfe_mot, UINT, 1272974512 (16)
        P_SATT.i_nState_rix_mot, UINT, 1272974544 (16)
        P_SATT.i_SattArrayStatus_KFE, ST_PMPS_Attenuator_IO, 1272972448 (1024)
        P_SATT.i_SattArrayStatus_RIX, ST_PMPS_Attenuator_IO, 1272973472 (1024)
        P_SATT.q_SattArrayReq, ST_PMPS_Attenuator_IO, 1272971424 (1024)

.. raw:: html

   </details>
   <br />


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4391296 (32)


PMPS_Arbiter
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>100 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_Arbiter.count, CTU, 1272763520 (128)
        PMPS_Arbiter.fbBeamClassWatcher, FB_BeamClassWatcher, 1272380608 (128512)
        PMPS_Arbiter.fbBPRequestor, FB_BPRequestor, 1272248192 (3904)
        PMPS_Arbiter.fbCuInterface, FB_CTLS_Outputs, 1272511040 (1856)
        PMPS_Arbiter.fbCuInterface.q_CLTS_ASSERTION_LINES, BOOL, 1272512848 (24)
        PMPS_Arbiter.fbMPSInterface, FB_BeamClassOutputs_BCD, 1272509120 (1920)
        PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES, BOOL, 1272510976 (32)
        PMPS_Arbiter.fbPhotonEnergyWatcher, FB_PhotonEnergyWatcher, 1272252096 (128512)
        PMPS_Arbiter.fbSetPE, PE_Ranges, 1272248160 (32)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO, FB_ArbiterToSubSys_IO, 1272857632 (31328)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.i_Connected, BOOL, 1272863712 (8)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272858432 (1760)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.i_TxPDOState, BOOL, 1272863728 (8)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.i_TxPDOToggle, BOOL, 1272863736 (8)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.i_WcState, BOOL, 1272863720 (8)
        PMPS_Arbiter.plc_crix_mot_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272861952 (1760)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO, FB_ArbiterToSubSys_IO, 1272888960 (31328)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.i_Connected, BOOL, 1272895040 (8)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272889760 (1760)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.i_TxPDOState, BOOL, 1272895056 (8)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.i_TxPDOToggle, BOOL, 1272895064 (8)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.i_WcState, BOOL, 1272895048 (8)
        PMPS_Arbiter.plc_crix_vac_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272893280 (1760)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO, FB_ArbiterToSubSys_IO, 1272575552 (31328)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_Connected, BOOL, 1272581632 (8)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272576352 (1760)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_TxPDOState, BOOL, 1272581648 (8)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_TxPDOToggle, BOOL, 1272581656 (8)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_WcState, BOOL, 1272581640 (8)
        PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272579872 (1760)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO, FB_ArbiterToSubSys_IO, 1272606880 (31328)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_Connected, BOOL, 1272612960 (8)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272607680 (1760)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_TxPDOState, BOOL, 1272612976 (8)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_TxPDOToggle, BOOL, 1272612984 (8)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_WcState, BOOL, 1272612968 (8)
        PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272611200 (1760)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO, FB_ArbiterToSubSys_IO, 1272512896 (31328)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_Connected, BOOL, 1272518976 (8)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272513696 (1760)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_TxPDOState, BOOL, 1272518992 (8)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_TxPDOToggle, BOOL, 1272519000 (8)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_WcState, BOOL, 1272518984 (8)
        PMPS_Arbiter.plc_kfe_motion_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272517216 (1760)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO, FB_ArbiterToSubSys_IO, 1272544224 (31328)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_Connected, BOOL, 1272550304 (8)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272545024 (1760)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_TxPDOState, BOOL, 1272550320 (8)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_TxPDOToggle, BOOL, 1272550328 (8)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_WcState, BOOL, 1272550312 (8)
        PMPS_Arbiter.plc_kfe_vac_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272548544 (1760)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO, FB_ArbiterToSubSys_IO, 1272638208 (31328)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_Connected, BOOL, 1272644288 (8)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272639008 (1760)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_TxPDOState, BOOL, 1272644304 (8)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_TxPDOToggle, BOOL, 1272644312 (8)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_WcState, BOOL, 1272644296 (8)
        PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272642528 (1760)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO, FB_ArbiterToSubSys_IO, 1272826304 (31328)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_Connected, BOOL, 1272832384 (8)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272827104 (1760)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_TxPDOState, BOOL, 1272832400 (8)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_TxPDOToggle, BOOL, 1272832408 (8)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_WcState, BOOL, 1272832392 (8)
        PMPS_Arbiter.plc_rix_mot_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272830624 (1760)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO, FB_ArbiterToSubSys_IO, 1272794976 (31328)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_Connected, BOOL, 1272801056 (8)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272795776 (1760)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_TxPDOState, BOOL, 1272801072 (8)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_TxPDOToggle, BOOL, 1272801080 (8)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_WcState, BOOL, 1272801064 (8)
        PMPS_Arbiter.plc_rix_optics_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272799296 (1760)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO, FB_ArbiterToSubSys_IO, 1272763648 (31328)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_Connected, BOOL, 1272769728 (8)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272764448 (1760)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_TxPDOState, BOOL, 1272769744 (8)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_TxPDOToggle, BOOL, 1272769752 (8)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_WcState, BOOL, 1272769736 (8)
        PMPS_Arbiter.plc_rix_vac_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272767968 (1760)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO, FB_ArbiterToSubSys_IO, 1272669536 (31328)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_Connected, BOOL, 1272675616 (8)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272670336 (1760)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_TxPDOState, BOOL, 1272675632 (8)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_TxPDOToggle, BOOL, 1272675640 (8)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_WcState, BOOL, 1272675624 (8)
        PMPS_Arbiter.plc_tmo_motion_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272673856 (1760)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO, FB_ArbiterToSubSys_IO, 1272700864 (31328)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_Connected, BOOL, 1272706944 (8)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272701664 (1760)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_TxPDOState, BOOL, 1272706960 (8)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_TxPDOToggle, BOOL, 1272706968 (8)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_WcState, BOOL, 1272706952 (8)
        PMPS_Arbiter.plc_tmo_optics_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272705184 (1760)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO, FB_ArbiterToSubSys_IO, 1272732192 (31328)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_Connected, BOOL, 1272738272 (8)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_RequestedBP, ST_BeamParams_IO, 1272732992 (1760)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_TxPDOState, BOOL, 1272738288 (8)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_TxPDOToggle, BOOL, 1272738296 (8)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_WcState, BOOL, 1272738280 (8)
        PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.o_CurrentBP, ST_BeamParams_IO, 1272736512 (1760)

.. raw:: html

   </details>
   <br />


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634583104 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634586720 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634584960 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634583200 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634586752 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634582880 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634582976 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634581824 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634588864 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634587840 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634587776 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634586736 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634583040 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634583120 (16)
        PMPS_GVL.PERange, PE_Ranges, 634582848 (32)
        PMPS_GVL.reVHyst, REAL, 634587808 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634583136 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634580064 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634578304 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634583072 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634582912 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634589888 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634587792 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634589920 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634589952 (256)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 1274509856 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 1274509344 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 1274509472 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 1274509600 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 1274509216 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 1274509728 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 1274540192 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__FFOTask, _Implicit_Task_Info, 1274495136 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 1274495840 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 1274490912 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 1274492992 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_FFOTask, OTCID, 1274495040 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 1274495104 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_FFOTask, OTCID, 1274492960 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 1274495072 (32)


